Added the memory game

--- a/public/index.html
+++ b/public/index.html
@@ -519,8 +519,22 @@
         <script type="module" src="/_dist_/hangman.js"></script>
     </div>
 
-    
-    <div id = 'memory' class = 'window'></div>
+
+    <div id = 'memory' class = 'window'>
+        <h1>Memory</h1><p>Find all pairs!</p>
+        <div id="content">
+            <table id="gameArea">
+            <tr>
+                <td>?</td><td>?</td><td>?</td><td>?</td><td>?</td>
+            </tr>
+            <tr>
+                <td>?</td><td>?</td><td>?</td><td>?</td><td>?</td>
+            </tr>
+            </table>
+        </div>
+	<script type="module" src="/_dist_/memory.js"></script>
+
+    </div>
     <div id = 'chat' class = 'window'></div>
 
     <script type="module" src="/_dist_/index.js"></script>
