Connected the chat application to the server

--- a/public/index.html
+++ b/public/index.html
@@ -519,7 +519,6 @@
         <script type="module" src="/_dist_/hangman.js"></script>
     </div>
 
-
     <div id = 'memory' class = 'window'>
         <h1>Memory</h1><p>Find all pairs!</p>
         <div id="content">
@@ -533,9 +532,16 @@
             </table>
         </div>
 	<script type="module" src="/_dist_/memory.js"></script>
-
     </div>
-    <div id = 'chat' class = 'window'></div>
+
+    <div id = 'chat' class = 'window'>
+        <input id="chatMessage" type="text", placeholder="Write your message"/>
+        <input id="chatButton" type="button", value="Send">
+
+        
+
+        <script type="module" src="/_dist_/chat.js"></script>
+    </div>
 
     <script type="module" src="/_dist_/index.js"></script>
   </body>
