Made the chat window scrollable in the case of overflow

--- a/public/index.html
+++ b/public/index.html
@@ -538,6 +538,8 @@
         <input id="chatMessage" type="text", placeholder="Write your message"/>
         <input id="chatButton" type="button", value="Send">
 
+        <div id = 'chatMessages'></div>
+
         <script type="module" src="/_dist_/chat.js"></script>
     </div>
 
