Managed to open several chat windows

--- a/public/index.html
+++ b/public/index.html
@@ -534,14 +534,7 @@
 	<script type="module" src="/_dist_/memory.js"></script>
     </div>
 
-    <div id = 'chat' class = 'window'>
-        <input id="chatMessage" type="text", placeholder="Write your message"/>
-        <input id="chatButton" type="button", value="Send">
-
-        <div id = 'chatMessages'></div>
-
-        <script type="module" src="/_dist_/chat.js"></script>
-    </div>
+    <input id = "generateChat" value = "Chat", type="button">
 
     <script type="module" src="/_dist_/index.js"></script>
   </body>
