--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id = "drop">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -536,6 +536,6 @@
 
     <input id = "generateChat" value = "Chat", type="button">
 
-    <script type="module" src="/_dist_/index.js"></script>
-  </body>
+    <script type="module" src="/_dist_/chatWindow.js"></script>
+  </body> 
 </html>
