Ran the linters and fixed all the errors

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
     <title>Snowpack App</title>
   </head>
   <body>
-    <div id = 'hangman' class = 'window', hidden = true>
+    <div id = "hangman" class = "window" hidden = "true">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="400"
             height="500"
-            viewBox="0 0 400 500">
+            viewbox="0 0 400 500">
             <defs
                 id="defs4">
                 <filter
