Added icons to start the applications as well as added more comments to my .js files

--- a/public/index.html
+++ b/public/index.html
@@ -493,9 +493,9 @@
         </svg>
     </div>
 
-    <input id = "generateChat" value = "Chat" type="button" class = "generateWindows">
-    <input id = "generateHangman" value = "Hangman" type = "button" class = "generateWindows">
-    <input id = "generateMemory" value = "Memory" type = "button" class = "generateWindows">
+    <input id = "generateChat" value = "Chat" type = "image" src = "img/chatIcon.png" class = "generateWindows">
+    <input id = "generateHangman" value = "Hangman" type = "image" src = "img/hangmanIcon.png" class = "generateWindows">
+    <input id = "generateMemory" value = "Memory" type = "image" src = "img/memoryIcon.png" class = "generateWindows">
 
     <script type = "module" src = "/_dist_/chatWindow.js"></script>
     <script type = "module" src = "/_dist_/hangmanWindow.js"></script>
